# ORCHID

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml
cmd/orchid-daemon/: main.go  matmul_fallback.c  matmul_wrapper.go
docs/: ARCHITECTURE.md  CONTRIBUTOR.md  README.locality.ja.md
evidence/reproduced/: speedups.json
jit/: jit.go  jit_amd64.go  jit_amd64.s  jit_arm64.go  jit_other.go  jit_test.go
locality/: fair_harness.c  matmul.plan
orchid/: __init__.py  aggregator.py  assembler.py  simulator.py
scheduler/: scheduler.go  scheduler_test.go
scripts/: run_locality.sh  run_simulator.sh  setup.sh
teppei_oohira_machine_code_locality_poc_v0_1/: NOTICE.md  README.md  SHA256SUMS.txt  run_demo.sh
teppei_oohira_machine_code_locality_poc_v0_1/concept/: kevin_machine_format_memory_operation_ja_v0_3.md
teppei_oohira_machine_code_locality_poc_v0_1/evidence/original/: fair_summary_2026-05-29.txt  fair_timing_result_2026-05-29.txt
teppei_oohira_machine_code_locality_poc_v0_1/src/: locality_assembler.py
teppei_oohira_machine_code_locality_poc_v0_1/tools/: fair_harness.c  summarize_results.py
teppei_oohira_parallel_memory_minimal_poc_v0_1/: NOTICE.md  README.ja.md  README.md  SHA256SUMS.txt  run_demo.sh
teppei_oohira_parallel_memory_minimal_poc_v0_1/evidence/: run_console_output.txt
teppei_oohira_parallel_memory_minimal_poc_v0_1/evidence/current/: results.csv  (+3 more)
teppei_oohira_parallel_memory_minimal_poc_v0_1/src/: parallel_memory_minimal_poc.py
(+3 files in other folders)
