[project]
name = "orchid"
version = "0.1.0"
description = "Operation-Role Coordination & Hedging Interface Daemon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU GPLv3" }
authors = [
    { name = "Teppei Oohira (@gatchimuchio)" },
    { name = "Kevin West (@westkevin12)" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
